# slate

./: .gitignore  README.md  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  vault.rs
src/components/: Editor.tsx  FileFinder.tsx  Preview.tsx  WysiwygEditor.tsx
src/plugins/: wikilinkAutocomplete.ts  wikilinkPlugin.ts  wikilinkView.ts
src/services/: fileService.ts  wikilinkService.ts
src/store/: appStore.ts
